2002-07-14  Han-Wen  <hanwen@cs.uu.nl>

	* input/mutopia/GNUmakefile: move mutopia/ to input/mutopia/

	* lily/beam.cc (quanting): add explicit support for cross-staff
	beaming: make slope penalty larger.

	* lily/beam.cc: use common refpoints throughout. This fixes many
	cross staff issues.
 
	* lily/paper-column.cc (before_line_breaking): bug fix.

	* lily/volta-engraver.cc (process_music): do something sensible if
	no staffs found. 

	* scripts/lilypond-book.py (make_pixmap): opps. Do png conversion
	only once. 

	* Documentation/user/refman.itely (Global layout): made section on
	global layout, added spacing documentation.

	* lily/staff-symbol.cc (brew_molecule): change ragged right for
	staff symbols. See comments.

2002-07-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/voice-devnull-engraver.cc (acknowledge_grob): Use proper
	spelling for always.  In solo a due mode, kill spanners when the
	other thread has solo.

	* lily/thread-devnull-engraver.cc (acknowledge_grob): In solo a
	due mode, kill everything when the other thread has solo.

	* lily/a2-engraver.cc (acknowledge_grob): In solo a due mode, do
	not set directions when we have solo.

	* lily/part-combine-music-iterator.cc (process): Set property
	"othersolo" if the other thread has solo.

2002-07-13  Han-Wen  <hanwen@cs.uu.nl>

	* lily/beam.cc (calc_stem_y): fix beams on quarter notes.

	* lily/stem-tremolo.cc (brew_molecule): add code for stem tremolos.

	* lily/auto-beam-engraver.cc (create_beam_p): remember Beam
	settings at the start of a potential auto beam.

	* lily/include/sequential-iterator.hh (class Sequential_iterator):
	bugfix: protect music list from GC.

	* Documentation/user/introduction.itely: misc fixes.

	* scripts/ly2dvi.py (run_latex): show latex error log. Ask for
	bugreport if lilypond is killed by a signal. 

	* input/regression/beam-funky.ly:  new file

	* lily/input-smob.cc (make_input): GUILE 1.7 compatibility fixes.
