@@ -1,3 +1,11 @@
+2002-07-15  Han-Wen  <hanwen@cs.uu.nl>
+
+	* lily/paper-column.cc (before_line_breaking): urg. bugfix.
+
+	* lily/separating-line-group-engraver.cc (finalize): don't replace
+	right-items, but add to list. This fixes a bug when a staff ends
+	with cross-staff voice switching away.
+ 
 2002-07-14  Han-Wen  <hanwen@cs.uu.nl>
 
 	* input/mutopia/GNUmakefile: move mutopia/ to input/mutopia/
